--- a/index.html
+++ b/index.html
@@ -6,30 +6,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lógica</title>
+    <script src="./js/main.js"></script>
 </head>
 
 <body>
-    <script>
-        //função sem parâmetro
-        function pularLinha() {
-            document.write("<br>");
-        };
 
-        //função com parâmentro
-        function mostra(idades) {
-            document.write(idades);
-            pularLinha();
-        };
-        //função com 2 parâmetros
-        function calculaImc(peso, altura) {
-            var imc = peso / (altura * altura);
-            mostra(`O imc calculado é ${imc}`);
-        };
-
-        calculaImc(61, 1.76);
-        calculaImc(65, 1.65);
-
-    </script>
 </body>
 
 </html>
